hphp/test/slow/enum-invalid-base/keyset.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/keyset.php on line 3
